syntax = "proto2";

package annotator;

message HttpMessage {
    // TODO I probably need only Pairing
    enum MessageType {
        PAIRING = 0;
        DATA_ASSIGNMENT = 1;
        NEW_REQUEST = 2;
    }
    required MessageType type = 1;

    required uint64 timestamp_eventTriggered = 2;

    enum RequestProtocol {
        HTTP = 0;
        TLS = 1;
    }
    optional RequestProtocol protocol = 3;
    optional string hostname = 4;
    optional uint32 ipVersion = 5;
    oneof serverIp {
        fixed32 serverIpV4 = 6;
        bytes   serverIpV6 = 7;
    }
    optional int32 serverPort = 8;

    optional bytes data = 9;
}
